# Uber_4_X

./: .env.example  .gitignore  README.md  docker-compose.yml  flake.nix
.stfolder/: syncthing-folder-3e25f3.txt
READMEs/: 0-Planeacion_inicial.md
backend/: Dockerfile  pyproject.toml
frontend/: Dockerfile  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.css
frontend/src/routes/: +page.svelte
